a1/brendan_gordon/TEST_PROGRAMS/invalidtype/theo_szymkowiak/prgm4.min
# Cannot store float/float into int
var a: int;
var b: float;
var c: float;

b = 2.0;
c = 3.0;

a = b / c;

